# kutlang

./: .gitignore  LICENSE  README.md  calc.py  fib.txt  main.py  pyproject.toml  rpn.py  test.py
examples/: auto_cast.kut  fizzbuzz.kut  functions.kut  globals.kut  identity.kut  mismatch_1.kut  mismatch_2.kut  nested.kut  scopes.kut  unused.kut
lang/: ast.py  context.py  lexer.py  parser.py  scope.py  symbols.py
tests/: 1_1.kut  1_2.kut  1_3.kut  2_1.kut  2_2.kut  2_3.kut  2_5.kut  3_2.kut  3_3.kut  3_4.kut  3_5.kut  3_6.kut  3_7.kut  3_8.kut  4_1.kut  4_2.kut  4_3.kut  4_4.kut  4_5.kut  5_1.kut  5_2.kut  5_4.kut
