[tool.poetry]
name = "calc-parser"
version = "0.1.0"
description = ""
authors = ["Piotr Szczygieł <szczygiel.p@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
rply = "^0.7.7"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
